# quran-offline

./: .gitignore  Cargo.toml  LICENSE  README.md  dprint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/qirat/: package.json
apps/qirat/data/: quran.json
apps/qirat/data/chapters/: bn.json  es.json  ru.json  sv.json  tr.json
apps/qirat/data/editions/: es.json  id.json  ru.json  transliteration.json  zh.json
apps/qirat/scripts/: downloader.ts
apps/tanzeel/: .eslintrc.js  auto-imports.d.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/tanzeel/src/: App.tsx  main.tsx
apps/tanzeel/src-tauri/: Cargo.toml  tauri.conf.json
apps/tanzeel/src-tauri/migrations/: 0_create_tables.sql  10_add_surah_data.sql  11_en.sahih.sql  12_fr.hamidullah.sql  13_sq.nahi.sql  14_hi.farooq.sql  15_hi.hindi.sql  16_zh.jian.sql  17_ber.mensur.sql  18_ar.jalalayn.sql  19_bn.hoque.sql  1_create_tables.sql  1_create_tables_translation.sql  20_bs.korkut.sql  21_bg.theophanov.sql  22_cs.hrbek.sql  23_dv.divehi.sql  24_nl.keyzer.sql  25_en.ahmedali.sql  26_en.mubarakpuri.sql  27_de.aburida.sql  28_ha.gumi.sql  29_id.indonesian.sql  2_simple.sql  30_it.piccardo.sql  31_ja.japanese.sql  32_ko.korean.sql  33_ku.asan.sql  34_ms.basmeih.sql  35_ml.abdulhameed.sql  36_no.berg.sql  37_ps.abdulwali.sql  38_fa.ansarian.sql  39_pl.bielawskiego.sql  3_simple_plain.sql  3_uthmanic.sql  40_en.transliteration.sql  4_simple_minimal.sql  5_simple_clean.sql  6_uthmani.sql  (+3 more)
apps/tanzeel/src-tauri/scripts/: cleaner.ts  downloader.ts  downloader2.ts  downloaderV2.ts  recitations.ts  tsconfig.dev.json
apps/tanzeel/src-tauri/scripts/data/chapters/: en.json  fr.json  id.json  ur.json  zh.json
apps/tanzeel/src-tauri/scripts/data/editions/: bn.json  en.json  fr.json  sv.json  tr.json  ur.json
apps/tanzeel/src-tauri/scripts/helpers/: downloadAllAyahsBySurah.ts  downloadAyahRecitation.ts  downloadSurahDetails.ts  downloadSurahInfo.ts  downloadSurahList.ts  index.ts
apps/tanzeel/src-tauri/src/: main.rs
apps/tanzeel/src/components/: index.ts
apps/tanzeel/src/state/: ayahPlayerAtom.ts  changeFontAtom.ts  (+6 more)
libs/ui/: package.json
(+56 files in other folders)
