[package]
name = "app"
version = "0.0.0"
authors = ["you"]
build = "src/build.rs"
default-run = "app"
edition = "2018"
license = ""
repository = ""
description = "A simple Quran App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
