[package]
name = "app"
version = "0.0.1"
authors = ["you"]
default-run = "app"
edition = "2021"
license = ""
repository = ""
rust-version = "1.57"
description = "A Tauri App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[dependencies]
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
rodio = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
tauri = { version = "1.0.0-rc.6", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
uuid = "0.8.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
